...
}

@Composable
internal fun EditorColumn(
    padding: PaddingValues,
    state: UiState,
    tag: String? = null,
    topContentPadding: Dp = 8.dp,
    showOperationMessage: Boolean = true,
    leadingContent: (@Composable () -> Unit)? = null,
    content: EditorColumnScope.() -> Unit,
) {
    val horizontalPadding = if (leadingContent == null) 16.dp else 0.dp
...
